@@ -145,7 +145,7 @@ Creates an empty source, which finishes immediately.
 sub empty {
     my ($self, $code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $src->finish;
 }
 
@@ -158,7 +158,7 @@ An empty source that never finishes.
 sub never {
     my ($self, $code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
 }
 
 =head2 throw
@@ -260,7 +260,7 @@ A bit like L<perlfunc/map>.
 sub map : method {
     my ($self, $code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -272,7 +272,7 @@ sub split : method {
     my ($self, $delim) = @_;
     $delim //= qr//;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -285,7 +285,7 @@ sub chunksize : method {
     die 'need positive chunk size parameter' unless $size && $size > 0;
 
     my $buffer = '';
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -300,7 +300,7 @@ sub by_line : method {
     my ($self, $delim) = @_;
     $delim //= $/;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     my $buffer = '';
     $self->completed->on_ready(sub {
         return if $src->is_ready;
@@ -326,7 +326,7 @@ sub combine_latest : method {
     push @sources, sub { @_ } if blessed $sources[-1];
     my $code = pop @sources;
 
-    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     unshift @sources, $self if ref $self;
     my @value;
     my %seen;
@@ -354,7 +354,7 @@ sub with_latest_from : method {
     push @sources, sub { @_ } if blessed $sources[-1];
     my $code = pop @sources;
 
-    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     my @value;
     my %seen;
     for my $idx (0..$#sources) {
@@ -385,7 +385,7 @@ sub merge : method {
     use namespace::clean qw(retain_future);
     my ($self, @sources) = @_;
 
-    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $combined = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     unshift @sources, $self if ref $self;
     for my $src (@sources) {
         $src->each(sub {
@@ -406,7 +406,7 @@ sub apply : method {
     use namespace::clean qw(retain_future);
     my ($self, @code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     my @pending;
     for my $code (@code) {
         push @pending, map $code->($_), $self;
@@ -429,7 +429,7 @@ sub apply : method {
 sub distinct {
     my $self = shift;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready($src->completed);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
@@ -461,7 +461,7 @@ sub skip {
     my ($self, $count) = @_;
     $count //= 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -480,7 +480,7 @@ sub skip_last {
     my ($self, $count) = @_;
     $count //= 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -502,7 +502,7 @@ sub take {
     $count //= 0;
     return $self->empty unless $count > 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -537,7 +537,7 @@ sub each_while_source {
 sub some {
     my ($self, $code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         my $sf = $src->completed;
         return if $sf->is_ready;
@@ -562,7 +562,7 @@ sub some {
 sub every {
     my ($self, $code) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_done(sub {
         return if $src->completed->is_ready;
         $src->emit(1);
@@ -586,7 +586,7 @@ sub count {
 
     my $count = 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_done(sub {
         $src->emit($count)
     })->on_ready(
@@ -604,7 +604,7 @@ sub sum {
 
     my $sum = 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_done(sub {
         $src->emit($sum)
     })->on_ready(
@@ -625,7 +625,7 @@ sub mean {
     my $sum = 0;
     my $count = 0;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->each(sub { ++$count; $sum += $_ });
     $self->completed->on_done(sub { $src->emit($sum / ($count || 1)) })
         ->on_ready($src->completed);
@@ -639,7 +639,7 @@ sub mean {
 sub max {
     my ($self) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     my $max;
     $self->each(sub {
         return if defined $max and $max > $_;
@@ -657,7 +657,7 @@ sub max {
 sub min {
     my ($self) = @_;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     my $min;
     $self->each(sub {
         return if defined $min and $min < $_;
@@ -682,7 +682,7 @@ sub statistics {
     my $min;
     my $max;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->each(sub {
         $min //= $_;
         $max //= $_;
@@ -713,7 +713,7 @@ sub filter {
     use namespace::clean qw(blessed);
     my $self = shift;
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
     $self->completed->on_ready(sub {
         return if $src->is_ready;
         shift->on_ready($src->completed);
@@ -831,7 +831,7 @@ sub flat_map {
         $code = sub { $_->$method(@args) }
     }
 
-    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)/);
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
 
     weaken(my $weak_sauce = $src);
     my $add = sub  {
